--- a/src/components/UI/Card.css
+++ b/src/components/UI/Card.css
@@ -1,8 +1,9 @@
 .Card {
-    background: whitesmoke;
-    width: 500px;
+    /* background: whitesmoke; */
+    width: 550px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1  );
     height: auto;
-    transform: translate(100% , 30%);
+    transform: translate(130% , 40%);
     padding: 7px 10px;
 }
 .dashboard {
